Fix top and nav buttons on mobile

--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -440,11 +440,15 @@ span.project-tag {
         color: initial;
     }
 
-    .top-button:active,
-    .nav-button a:active,
     .skill-item:active,
     .skill-icon:active {
         background: #000;
         color: #fff;
+    }
+
+    .top-button:active,
+    .nav-button a:active {
+        background: #fff;
+        color: #000;
     }
 }
